[gd_scene load_steps=7 format=2]

[ext_resource path="res://art/menu-bg-one.jpg" type="Texture" id=1]
[ext_resource path="res://buttons/boton_menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/new_dynamicfont_30.tres" type="DynamicFont" id=3]
[ext_resource path="res://art/bien_preview_rev_1.png" type="Texture" id=4]
[ext_resource path="res://art/x-mark-check-mark-clip-art-wrong-sign_preview_rev_1.png" type="Texture" id=5]
[ext_resource path="res://scripts/MenuPrincipal.gd" type="Script" id=6]

[node name="MenuPrincipal" type="Node2D"]
position = Vector2( 0, 1 )
script = ExtResource( 6 )

[node name="Fondo" type="Sprite" parent="."]
position = Vector2( 532, 299 )
scale = Vector2( 0.554167, 0.622407 )
texture = ExtResource( 1 )

[node name="Actividad1" parent="." instance=ExtResource( 2 )]
margin_left = 192.0
margin_top = 167.0
margin_right = 385.0
margin_bottom = 215.0
focus_neighbour_right = NodePath("../Actividad2")
focus_neighbour_bottom = NodePath("../Actividad4")
text = "Actividad 1"
reference_path = "res://scenes/Actividad1.tscn"
start_focused = true

[node name="Actividad2" parent="." instance=ExtResource( 2 )]
margin_left = 448.0
margin_top = 167.0
margin_right = 641.0
margin_bottom = 215.0
focus_neighbour_left = NodePath("../Actividad1")
focus_neighbour_right = NodePath("../Actividad3")
focus_neighbour_bottom = NodePath("../Actividad5")
text = "Actividad 2"
reference_path = "res://scenes/Actividad2.tscn"

[node name="Actividad3" parent="." instance=ExtResource( 2 )]
margin_left = 704.0
margin_top = 167.0
margin_right = 897.0
margin_bottom = 215.0
focus_neighbour_left = NodePath("../Actividad2")
focus_neighbour_bottom = NodePath("../Actividad6")
text = "Actividad 3"
reference_path = "res://scenes/Actividad3.tscn"

[node name="Actividad4" parent="." instance=ExtResource( 2 )]
margin_left = 192.0
margin_top = 295.0
margin_right = 385.0
margin_bottom = 343.0
focus_neighbour_top = NodePath("../Actividad1")
focus_neighbour_right = NodePath("../Actividad5")
focus_neighbour_bottom = NodePath("../Actividad7")
text = "Actividad 4"
reference_path = "res://scenes/Actividad4.tscn"

[node name="Actividad5" parent="." instance=ExtResource( 2 )]
margin_left = 448.0
margin_top = 295.0
margin_right = 641.0
margin_bottom = 343.0
focus_neighbour_left = NodePath("../Actividad4")
focus_neighbour_top = NodePath("../Actividad2")
focus_neighbour_right = NodePath("../Actividad6")
focus_neighbour_bottom = NodePath("../Actividad8")
text = "Actividad 5"
reference_path = "res://scenes/Actividad5.tscn"

[node name="Actividad6" parent="." instance=ExtResource( 2 )]
margin_left = 704.0
margin_top = 295.0
margin_right = 897.0
margin_bottom = 343.0
focus_neighbour_left = NodePath("../Actividad5")
focus_neighbour_top = NodePath("../Actividad3")
focus_neighbour_bottom = NodePath("../Actividad9")
text = "Actividad 6"
reference_path = "res://scenes/Actividad6.tscn"

[node name="Actividad7" parent="." instance=ExtResource( 2 )]
margin_left = 192.0
margin_top = 423.0
margin_right = 385.0
margin_bottom = 471.0
focus_neighbour_top = NodePath("../Actividad4")
focus_neighbour_right = NodePath("../Actividad8")
text = "Actividad 7"
reference_path = "res://scenes/Actividad7.tscn"

[node name="Actividad8" parent="." instance=ExtResource( 2 )]
margin_left = 448.0
margin_top = 423.0
margin_right = 641.0
margin_bottom = 471.0
focus_neighbour_left = NodePath("../Actividad7")
focus_neighbour_top = NodePath("../Actividad5")
focus_neighbour_right = NodePath("../Actividad9")
focus_neighbour_bottom = NodePath("../Salir")
text = "Actividad 8"
reference_path = "res://scenes/Actividad8.tscn"

[node name="Actividad9" parent="." instance=ExtResource( 2 )]
visible = false
margin_left = 704.0
margin_top = 423.0
margin_right = 897.0
margin_bottom = 471.0
focus_neighbour_left = NodePath("../Actividad8")
focus_neighbour_top = NodePath("../Actividad6")
text = "Actividad 9"

[node name="Salir" parent="." instance=ExtResource( 2 )]
margin_left = 448.0
margin_top = 543.0
margin_right = 640.0
margin_bottom = 575.0
focus_neighbour_top = NodePath("../Actividad8")
text = "Salir"

[node name="Titulo" type="Label" parent="."]
margin_left = 192.0
margin_top = 63.0
margin_right = 896.0
margin_bottom = 127.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Actividades de laboratorio"
align = 1
valign = 1
uppercase = true

[node name="Bien1" type="Sprite" parent="."]
visible = false
position = Vector2( 392, 163 )
scale = Vector2( 0.196667, 0.199791 )
texture = ExtResource( 4 )
offset = Vector2( -40.6777, 40.0419 )

[node name="Bien9" type="Sprite" parent="."]
visible = false
position = Vector2( 902, 421 )
scale = Vector2( 0.196667, 0.199791 )
texture = ExtResource( 4 )
offset = Vector2( -40.6777, 40.0419 )

[node name="Bien8" type="Sprite" parent="."]
visible = false
position = Vector2( 647, 420 )
scale = Vector2( 0.196667, 0.199791 )
texture = ExtResource( 4 )
offset = Vector2( -40.6777, 40.0419 )

[node name="Bien6" type="Sprite" parent="."]
visible = false
position = Vector2( 902, 291 )
scale = Vector2( 0.196667, 0.199791 )
texture = ExtResource( 4 )
offset = Vector2( -40.6777, 40.0419 )

[node name="Bien5" type="Sprite" parent="."]
visible = false
position = Vector2( 648, 293 )
scale = Vector2( 0.196667, 0.199791 )
texture = ExtResource( 4 )
offset = Vector2( -40.6777, 40.0419 )

[node name="Bien3" type="Sprite" parent="."]
visible = false
position = Vector2( 902, 164 )
scale = Vector2( 0.196667, 0.199791 )
texture = ExtResource( 4 )
offset = Vector2( -40.6777, 40.0419 )

[node name="Bien2" type="Sprite" parent="."]
visible = false
position = Vector2( 648, 165 )
scale = Vector2( 0.196667, 0.199791 )
texture = ExtResource( 4 )
offset = Vector2( -40.6777, 40.0419 )

[node name="Bien4" type="Sprite" parent="."]
visible = false
position = Vector2( 392, 290 )
scale = Vector2( 0.196667, 0.199791 )
texture = ExtResource( 4 )
offset = Vector2( -40.6777, 40.0419 )

[node name="Bien7" type="Sprite" parent="."]
visible = false
position = Vector2( 392, 418 )
scale = Vector2( 0.196667, 0.199791 )
texture = ExtResource( 4 )
offset = Vector2( -40.6777, 40.0419 )

[node name="Mal1" type="Sprite" parent="."]
visible = false
position = Vector2( 376, 175 )
scale = Vector2( 0.12, 0.131188 )
texture = ExtResource( 5 )

[node name="Mal2" type="Sprite" parent="."]
visible = false
position = Vector2( 632, 175 )
scale = Vector2( 0.12, 0.131188 )
texture = ExtResource( 5 )

[node name="Mal3" type="Sprite" parent="."]
visible = false
position = Vector2( 888, 175 )
scale = Vector2( 0.12, 0.131188 )
texture = ExtResource( 5 )

[node name="Mal4" type="Sprite" parent="."]
visible = false
position = Vector2( 376, 303 )
scale = Vector2( 0.12, 0.131188 )
texture = ExtResource( 5 )

[node name="Mal5" type="Sprite" parent="."]
visible = false
position = Vector2( 632, 303 )
scale = Vector2( 0.12, 0.131188 )
texture = ExtResource( 5 )

[node name="Mal6" type="Sprite" parent="."]
visible = false
position = Vector2( 888, 303 )
scale = Vector2( 0.12, 0.131188 )
texture = ExtResource( 5 )

[node name="Mal7" type="Sprite" parent="."]
visible = false
position = Vector2( 376, 431 )
scale = Vector2( 0.12, 0.131188 )
texture = ExtResource( 5 )

[node name="Mal8" type="Sprite" parent="."]
visible = false
position = Vector2( 632, 431 )
scale = Vector2( 0.12, 0.131188 )
texture = ExtResource( 5 )

[node name="Mal9" type="Sprite" parent="."]
visible = false
position = Vector2( 888, 431 )
scale = Vector2( 0.12, 0.131188 )
texture = ExtResource( 5 )
