extends Node2D

func _ready():
	
	if Singleton.bien1 == true:
		$Bien1.visible = true
	if Singleton.mal1 == true:
		$Mal1.visible = true
	
	if Singleton.bien2 == true:
		$Bien2.visible = true
	if Singleton.mal2 == true:
		$Mal2.visible = true
	
	if Singleton.bien3 == true:
		$Bien3.visible = true
	if Singleton.mal3 == true:
		$Mal3.visible = true
		
	if Singleton.bien4 == true:
		$Bien4.visible = true
	if Singleton.mal4 == true:
		$Mal4.visible = true
		
	if Singleton.bien5 == true:
		$Bien5.visible = true
	if Singleton.mal5 == true:
		$Mal5.visible = true
		
	if Singleton.bien6 == true:
		$Bien6.visible = true
	if Singleton.mal6 == true:
		$Mal6.visible = true
		
	if Singleton.bien7 == true:
		$Bien7.visible = true
	if Singleton.mal7 == true:
		$Mal7.visible = true
		
	if Singleton.bien8 == true:
		$Bien8.visible = true
	if Singleton.mal8 == true:
		$Mal8.visible = true
		
	if Singleton.bien9 == true:
		$Bien9.visible = true
	if Singleton.mal9 == true:
		$Mal9.visible = true

